// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseSummary Display with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     of 
     totalling 
    $50.13
  </h1>
</div>
`;

exports[`ExpenseSummary Display with 23 expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     of 
     totalling 
    $1,245,250.13
  </h1>
</div>
`;
